new data with income classification

--- a/us_counties_data.ipynb
+++ b/us_counties_data.ipynb
@@ -20,7 +20,8 @@
     "#list of states with state-wide lockdown (as seen on https://www.businessinsider.com/us-map-stay-at-home-orders-lockdowns-2020-3)\n",
     "state_wide = ['CA','WA','OR','NV','NM','MN','WI','MI','KY','LA','VA','MD','VT','NH','NJ','MA','NY','CT','DE','DC','PR']\n",
     "#dates of implementation\n",
-    "dates = ['031920','032320','032320','040120','032420','032520','032520','032420','032620','032020','032520','033020','032520','032720','032120','032320','032220','032320','032420','032720','033020']\n",
+    "dates = ['031920','032320','032320','040120','032420','032520','032520','032420','032620','032020','032520','033020','032520','032720','032120','032320','032220','032320','032420','032720',\n",
+    "         '033020']\n",
     "\n",
     "#conversion to datetime format\n",
     "dates = [pd.to_datetime(x,infer_datetime_format=True).date() for x in dates]\n",
