updated with comments

--- a/data_creation.ipynb
+++ b/data_creation.ipynb
@@ -24,16 +24,16 @@
    "source": [
     "## Sources\n",
     "\n",
-    "[NY Municipality Level Test Data](https://health.data.ny.gov/Health/New-York-State-Statewide-COVID-19-Testing/xdss-u53e/data)\n",
+    "[NY County Level Test Data](https://health.data.ny.gov/Health/New-York-State-Statewide-COVID-19-Testing/xdss-u53e/data)\n",
     "\n",
     "[County Level Economic Variables](https://raw.githubusercontent.com/JieYingWu/COVID-19_US_County-level_Summaries/master/data/counties.csv)\n",
     "\n",
-    "[NY County Codes](https://data.ny.gov/Government-Finance/NY-Municipalities-and-County-FIPS-codes/79vr-2kdi)\n"
+    "[NY Municipality Codes](https://data.ny.gov/Government-Finance/NY-Municipalities-and-County-FIPS-codes/79vr-2kdi)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -149,7 +151,7 @@
        "4                              134                                  1708  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,32 +225,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "#joining infection w socioeconomic\n",
-    "ses_and_infection = county_data[county_data['State']=='NY'\\\n",
+    "joined_df = county_data[county_data['State']=='NY'\\\n",
     "                               ].set_index('FIPS').join(ny_data_fips.set_index('County FIPS'))\n",
     "#dropping null column\n",
-    "ses_and_infection = ses_and_infection[relevant_ses_columns\\\n",
+    "joined_df = joined_df[relevant_ses_columns\\\n",
     "                                      +relevant_infection_columns].drop(36000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#doing some clean up\n",
-    "ses_and_infection = ses_and_infection.reset_index().rename(columns={'index':'FIPS'})\n",
-    "ses_and_infection['Test Date'] = pd.to_datetime(ses_and_infection['Test Date'])"
+    "joined_df = joined_df.reset_index().rename(columns={'index':'FIPS'})\n",
+    "joined_df['Test Date'] = pd.to_datetime(joined_df['Test Date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +290,7 @@
        "      <td>36001</td>\n",
        "      <td>64536.0</td>\n",
        "      <td>7.100041e+09</td>\n",
-       "      <td>05/13/2020</td>\n",
+       "      <td>2020-05-13</td>\n",
        "      <td>15.0</td>\n",
        "      <td>1509.0</td>\n",
        "      <td>546.0</td>\n",
@@ -299,7 +301,7 @@
        "      <td>36001</td>\n",
        "      <td>64536.0</td>\n",
        "      <td>7.100041e+09</td>\n",
-       "      <td>05/12/2020</td>\n",
+       "      <td>2020-05-12</td>\n",
        "      <td>15.0</td>\n",
        "      <td>1494.0</td>\n",
        "      <td>335.0</td>\n",
@@ -310,7 +312,7 @@
        "      <td>36001</td>\n",
        "      <td>64536.0</td>\n",
        "      <td>7.100041e+09</td>\n",
-       "      <td>05/11/2020</td>\n",
+       "      <td>2020-05-11</td>\n",
        "      <td>23.0</td>\n",
        "      <td>1479.0</td>\n",
        "      <td>341.0</td>\n",
@@ -321,7 +323,7 @@
        "      <td>36001</td>\n",
        "      <td>64536.0</td>\n",
        "      <td>7.100041e+09</td>\n",
-       "      <td>05/10/2020</td>\n",
+       "      <td>2020-05-10</td>\n",
        "      <td>24.0</td>\n",
        "      <td>1456.0</td>\n",
        "      <td>384.0</td>\n",
@@ -332,7 +334,7 @@
        "      <td>36001</td>\n",
        "      <td>64536.0</td>\n",
        "      <td>7.100041e+09</td>\n",
-       "      <td>05/09/2020</td>\n",
+       "      <td>2020-05-09</td>\n",
        "      <td>16.0</td>\n",
        "      <td>1432.0</td>\n",
        "      <td>455.0</td>\n",
@@ -357,12 +359,12 @@
        "3                                       7.100041e+09                                         \n",
        "4                                       7.100041e+09                                         \n",
        "\n",
-       "    Test Date  New Positives  Cumulative Number of Positives  \\\n",
-       "0  05/13/2020           15.0                          1509.0   \n",
-       "1  05/12/2020           15.0                          1494.0   \n",
-       "2  05/11/2020           23.0                          1479.0   \n",
-       "3  05/10/2020           24.0                          1456.0   \n",
-       "4  05/09/2020           16.0                          1432.0   \n",
+       "   Test Date  New Positives  Cumulative Number of Positives  \\\n",
+       "0 2020-05-13           15.0                          1509.0   \n",
+       "1 2020-05-12           15.0                          1494.0   \n",
+       "2 2020-05-11           23.0                          1479.0   \n",
+       "3 2020-05-10           24.0                          1456.0   \n",
+       "4 2020-05-09           16.0                          1432.0   \n",
        "\n",
        "   Total Number of Tests Performed  Cumulative Number of Tests Performed  \n",
        "0                            546.0                               15792.0  \n",
@@ -372,22 +374,22 @@
        "4                            455.0                               14186.0  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ses_and_infection.head()"
+    "joined_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ses_and_infection.to_csv(\"./ny_county_data/ny_county_data.csv\")"
+    "joined_df.to_csv(\"./ny_county_data/ny_county_data.csv\")"
    ]
   }
  ],
