county code error fixed

--- a/data_creation.ipynb
+++ b/data_creation.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -169,17 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#correcting a naming difference between the datasets\n",
-    "county_codes.replace(\"St Lawrence\",\"St. Lawrence\",inplace=True)"
+    "county_codes.replace(\"St Lawrence\",\"St. Lawrence\",inplace=True)\n",
+    "\n",
+    "#st lawrence has the wrong county code so we're replacing it \n",
+    "stlaw = county_codes[county_codes['County Name']=='St. Lawrence'].replace(36099, 36089)\n",
+    "county_codes = county_codes[county_codes['County Name']!='St. Lawrence'].append(stlaw)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +378,7 @@
        "4                            455.0                               14186.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
