new data and update to keep zero positive records

--- a/data_creation.ipynb
+++ b/data_creation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {
     "scrolled": false
    },
@@ -88,48 +88,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>05/13/2020</td>\n",
+       "      <td>06/07/2020</td>\n",
        "      <td>Albany</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1509</td>\n",
-       "      <td>546</td>\n",
-       "      <td>15792</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>1194</td>\n",
+       "      <td>32194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>05/13/2020</td>\n",
+       "      <td>06/07/2020</td>\n",
        "      <td>Allegany</td>\n",
        "      <td>0</td>\n",
-       "      <td>44</td>\n",
-       "      <td>53</td>\n",
-       "      <td>938</td>\n",
+       "      <td>51</td>\n",
+       "      <td>149</td>\n",
+       "      <td>3117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>05/13/2020</td>\n",
+       "      <td>06/07/2020</td>\n",
        "      <td>Bronx</td>\n",
-       "      <td>303</td>\n",
-       "      <td>41980</td>\n",
-       "      <td>3338</td>\n",
-       "      <td>127471</td>\n",
+       "      <td>72</td>\n",
+       "      <td>46052</td>\n",
+       "      <td>3718</td>\n",
+       "      <td>222329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>05/13/2020</td>\n",
+       "      <td>06/07/2020</td>\n",
        "      <td>Broome</td>\n",
-       "      <td>1</td>\n",
-       "      <td>383</td>\n",
-       "      <td>343</td>\n",
-       "      <td>6146</td>\n",
+       "      <td>4</td>\n",
+       "      <td>624</td>\n",
+       "      <td>745</td>\n",
+       "      <td>22789</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>05/13/2020</td>\n",
+       "      <td>06/07/2020</td>\n",
        "      <td>Cattaraugus</td>\n",
-       "      <td>3</td>\n",
-       "      <td>64</td>\n",
-       "      <td>134</td>\n",
-       "      <td>1708</td>\n",
+       "      <td>1</td>\n",
+       "      <td>95</td>\n",
+       "      <td>245</td>\n",
+       "      <td>7036</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -137,21 +137,21 @@
       ],
       "text/plain": [
        "    Test Date       County  New Positives  Cumulative Number of Positives  \\\n",
-       "0  05/13/2020       Albany             15                            1509   \n",
-       "1  05/13/2020     Allegany              0                              44   \n",
-       "2  05/13/2020        Bronx            303                           41980   \n",
-       "3  05/13/2020       Broome              1                             383   \n",
-       "4  05/13/2020  Cattaraugus              3                              64   \n",
+       "0  06/07/2020       Albany             17                            1978   \n",
+       "1  06/07/2020     Allegany              0                              51   \n",
+       "2  06/07/2020        Bronx             72                           46052   \n",
+       "3  06/07/2020       Broome              4                             624   \n",
+       "4  06/07/2020  Cattaraugus              1                              95   \n",
        "\n",
        "   Total Number of Tests Performed  Cumulative Number of Tests Performed  \n",
-       "0                              546                                 15792  \n",
-       "1                               53                                   938  \n",
-       "2                             3338                                127471  \n",
-       "3                              343                                  6146  \n",
-       "4                              134                                  1708  "
+       "0                             1194                                 32194  \n",
+       "1                              149                                  3117  \n",
+       "2                             3718                                222329  \n",
+       "3                              745                                 22789  \n",
+       "4                              245                                  7036  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -294,55 +294,55 @@
        "      <td>36001</td>\n",
        "      <td>64536.0</td>\n",
        "      <td>7.100041e+09</td>\n",
-       "      <td>2020-05-13</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>1509.0</td>\n",
-       "      <td>546.0</td>\n",
-       "      <td>15792.0</td>\n",
+       "      <td>2020-06-07</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>1978.0</td>\n",
+       "      <td>1194.0</td>\n",
+       "      <td>32194.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>36001</td>\n",
        "      <td>64536.0</td>\n",
        "      <td>7.100041e+09</td>\n",
-       "      <td>2020-05-12</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>1494.0</td>\n",
-       "      <td>335.0</td>\n",
-       "      <td>15246.0</td>\n",
+       "      <td>2020-06-06</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1961.0</td>\n",
+       "      <td>751.0</td>\n",
+       "      <td>31000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>36001</td>\n",
        "      <td>64536.0</td>\n",
        "      <td>7.100041e+09</td>\n",
-       "      <td>2020-05-11</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>1479.0</td>\n",
-       "      <td>341.0</td>\n",
-       "      <td>14911.0</td>\n",
+       "      <td>2020-06-05</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1953.0</td>\n",
+       "      <td>1164.0</td>\n",
+       "      <td>30249.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>36001</td>\n",
        "      <td>64536.0</td>\n",
        "      <td>7.100041e+09</td>\n",
-       "      <td>2020-05-10</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1456.0</td>\n",
-       "      <td>384.0</td>\n",
-       "      <td>14570.0</td>\n",
+       "      <td>2020-06-04</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1941.0</td>\n",
+       "      <td>1179.0</td>\n",
+       "      <td>29085.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>36001</td>\n",
        "      <td>64536.0</td>\n",
        "      <td>7.100041e+09</td>\n",
-       "      <td>2020-05-09</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1432.0</td>\n",
-       "      <td>455.0</td>\n",
-       "      <td>14186.0</td>\n",
+       "      <td>2020-06-03</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1930.0</td>\n",
+       "      <td>817.0</td>\n",
+       "      <td>27906.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -364,21 +364,21 @@
        "4                                       7.100041e+09                                         \n",
        "\n",
        "   Test Date  New Positives  Cumulative Number of Positives  \\\n",
-       "0 2020-05-13           15.0                          1509.0   \n",
-       "1 2020-05-12           15.0                          1494.0   \n",
-       "2 2020-05-11           23.0                          1479.0   \n",
-       "3 2020-05-10           24.0                          1456.0   \n",
-       "4 2020-05-09           16.0                          1432.0   \n",
+       "0 2020-06-07           17.0                          1978.0   \n",
+       "1 2020-06-06            8.0                          1961.0   \n",
+       "2 2020-06-05           12.0                          1953.0   \n",
+       "3 2020-06-04           11.0                          1941.0   \n",
+       "4 2020-06-03           10.0                          1930.0   \n",
        "\n",
        "   Total Number of Tests Performed  Cumulative Number of Tests Performed  \n",
-       "0                            546.0                               15792.0  \n",
-       "1                            335.0                               15246.0  \n",
-       "2                            341.0                               14911.0  \n",
-       "3                            384.0                               14570.0  \n",
-       "4                            455.0                               14186.0  "
+       "0                           1194.0                               32194.0  \n",
+       "1                            751.0                               31000.0  \n",
+       "2                           1164.0                               30249.0  \n",
+       "3                           1179.0                               29085.0  \n",
+       "4                            817.0                               27906.0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,11 +389,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "joined_df.to_csv(\"./ny_county_data/ny_county_data.csv\")"
+    "#renaming columns\n",
+    "joined_df = joined_df.rename(columns={'Density per square mile of land area - Population':'Population Density',\\\n",
+    "                        'transit_scores - population weighted averages aggregated from town/city level to county':'Transit Scores',\\\n",
+    "                       'Median_Household_Income_2018':'Median Income',\n",
+    "                       'Cumulative Number of Positives': 'Cumulative Positives',\n",
+    "                       'Total Number of Tests Performed': 'Total Tests',\n",
+    "                       'Cumulative Number of Tests Performed': 'Cumulative Tests'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined_df.to_csv(\"./data/ny_county_data.csv\")"
    ]
   }
  ],
