NY social deprivation index binning

--- a/SDI.ipynb
+++ b/SDI.ipynb
@@ -331,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Merge NY County FIPS codes data with SDI data**"
+    "**Import NY County FIPS codes data**"
    ]
   },
   {
@@ -1575,6 +1575,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#checking counts\n",
+    "x = sdi_ny.sdi_quartile_label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Q2    18\n",
+       "Q1    16\n",
+       "Q4    15\n",
+       "Q3    14\n",
+       "Name: sdi_quartile_label, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [
@@ -1598,13 +1632,6 @@
     "x = sdi_ny.sdi_quartile_label.value_counts()\n",
     "x/x.sum()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
