updates to outcome variable

--- a/data_creation.ipynb
+++ b/data_creation.ipynb
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -958,7 +958,7 @@
        "4                                 27906        36001  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,50 +983,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/smruthi/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 7 day rolling average of new cases - avg of new cases from current day + 6 previous days \n",
-    "df['Rolling Avg New Cases'] = df['New Positives'].rolling(7).mean()"
+    "#sorting so we can access new cases in chronological order by county\n",
+    "sorted_df = df.set_index(['County FIPS','Test Date']).sort_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#separately calculating rolling window for each county \n",
+    "rolling_avg = []\n",
+    "for i in df['County FIPS'].unique():\n",
+    "    df_new = sorted_df.loc[i]\n",
+    "    # for each county we retain first 6 observations as is\n",
+    "    # from obs 7 we take an average of current obs with preceeding 6 obs\n",
+    "    new_rolling = df_new['New Positives'][:6].to_list() + df_new['New Positives'].rolling(7).mean().to_list()[6:]\n",
+    "    rolling_avg.extend(new_rolling)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_df['Rolling Avg New Cases'] = rolling_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/smruthi/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# rolling average normalized by population*100,000 - per capita rate of new cases\n",
-    "df['Per Capita Rate'] = (df['Rolling Avg New Cases']/df['POP_ESTIMATE_2018'])*100000"
+    "sorted_df['Per Capita Rate'] = (sorted_df['Rolling Avg New Cases']/sorted_df['POP_ESTIMATE_2018'])*100000"
    ]
   },
   {
@@ -1039,41 +1038,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/smruthi/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n",
-      "/Users/smruthi/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  import sys\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create SDI quartile variable\n",
-    "df['sdi_quartile'] = pd.qcut(df['sdi_score'], q=4)\n",
+    "sorted_df['sdi_quartile'] = pd.qcut(sorted_df['sdi_score'], q=4)\n",
     "\n",
     "# label the bins\n",
     "bin_labels_4 = ['Q1', 'Q2', 'Q3', 'Q4']\n",
-    "df['sdi_quartile_label'] = pd.qcut(df['sdi_score'],\n",
+    "sorted_df['sdi_quartile_label'] = pd.qcut(sorted_df['sdi_score'],\n",
     "                              q=[0, .25, .50, .75, 1],labels=bin_labels_4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1097,93 +1077,97 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>POP_ESTIMATE_2018</th>\n",
        "      <th>sdi_score</th>\n",
-       "      <th>Test Date</th>\n",
        "      <th>New Positives</th>\n",
        "      <th>Cumulative Number of Positives</th>\n",
        "      <th>Total Number of Tests Performed</th>\n",
        "      <th>Cumulative Number of Tests Performed</th>\n",
-       "      <th>County FIPS</th>\n",
        "      <th>Rolling Avg New Cases</th>\n",
        "      <th>Per Capita Rate</th>\n",
        "      <th>sdi_quartile</th>\n",
        "      <th>sdi_quartile_label</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>County FIPS</th>\n",
+       "      <th>Test Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <td rowspan=\"5\" valign=\"top\">36001</td>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>307117</td>\n",
+       "      <td>36</td>\n",
        "      <td>0</td>\n",
-       "      <td>307117</td>\n",
-       "      <td>36</td>\n",
-       "      <td>2020-06-07</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1978</td>\n",
-       "      <td>1194</td>\n",
-       "      <td>32194</td>\n",
-       "      <td>36001</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>(24.0, 37.5]</td>\n",
        "      <td>Q2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <td>2020-03-03</td>\n",
        "      <td>307117</td>\n",
        "      <td>36</td>\n",
-       "      <td>2020-06-06</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1961</td>\n",
-       "      <td>751</td>\n",
-       "      <td>31000</td>\n",
-       "      <td>36001</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>(24.0, 37.5]</td>\n",
        "      <td>Q2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <td>2020-03-04</td>\n",
        "      <td>307117</td>\n",
        "      <td>36</td>\n",
-       "      <td>2020-06-05</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1953</td>\n",
-       "      <td>1164</td>\n",
-       "      <td>30249</td>\n",
-       "      <td>36001</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>(24.0, 37.5]</td>\n",
        "      <td>Q2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>2020-03-05</td>\n",
+       "      <td>307117</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>307117</td>\n",
-       "      <td>36</td>\n",
-       "      <td>2020-06-04</td>\n",
-       "      <td>11</td>\n",
-       "      <td>1941</td>\n",
-       "      <td>1179</td>\n",
-       "      <td>29085</td>\n",
-       "      <td>36001</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>(24.0, 37.5]</td>\n",
        "      <td>Q2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <td>2020-03-06</td>\n",
        "      <td>307117</td>\n",
        "      <td>36</td>\n",
-       "      <td>2020-06-03</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1930</td>\n",
-       "      <td>817</td>\n",
-       "      <td>27906</td>\n",
-       "      <td>36001</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>(24.0, 37.5]</td>\n",
        "      <td>Q2</td>\n",
        "    </tr>\n",
@@ -1192,51 +1176,71 @@
        "</div>"
       ],
       "text/plain": [
-       "   POP_ESTIMATE_2018  sdi_score  Test Date  New Positives  \\\n",
-       "0             307117         36 2020-06-07             17   \n",
-       "1             307117         36 2020-06-06              8   \n",
-       "2             307117         36 2020-06-05             12   \n",
-       "3             307117         36 2020-06-04             11   \n",
-       "4             307117         36 2020-06-03             10   \n",
+       "                        POP_ESTIMATE_2018  sdi_score  New Positives  \\\n",
+       "County FIPS Test Date                                                 \n",
+       "36001       2020-03-02             307117         36              0   \n",
+       "            2020-03-03             307117         36              0   \n",
+       "            2020-03-04             307117         36              0   \n",
+       "            2020-03-05             307117         36              0   \n",
+       "            2020-03-06             307117         36              0   \n",
        "\n",
-       "   Cumulative Number of Positives  Total Number of Tests Performed  \\\n",
-       "0                            1978                             1194   \n",
-       "1                            1961                              751   \n",
-       "2                            1953                             1164   \n",
-       "3                            1941                             1179   \n",
-       "4                            1930                              817   \n",
+       "                        Cumulative Number of Positives  \\\n",
+       "County FIPS Test Date                                    \n",
+       "36001       2020-03-02                               0   \n",
+       "            2020-03-03                               0   \n",
+       "            2020-03-04                               0   \n",
+       "            2020-03-05                               0   \n",
+       "            2020-03-06                               0   \n",
        "\n",
-       "   Cumulative Number of Tests Performed  County FIPS  Rolling Avg New Cases  \\\n",
-       "0                                 32194        36001                    NaN   \n",
-       "1                                 31000        36001                    NaN   \n",
-       "2                                 30249        36001                    NaN   \n",
-       "3                                 29085        36001                    NaN   \n",
-       "4                                 27906        36001                    NaN   \n",
+       "                        Total Number of Tests Performed  \\\n",
+       "County FIPS Test Date                                     \n",
+       "36001       2020-03-02                                0   \n",
+       "            2020-03-03                                0   \n",
+       "            2020-03-04                                0   \n",
+       "            2020-03-05                                3   \n",
+       "            2020-03-06                                0   \n",
        "\n",
-       "   Per Capita Rate  sdi_quartile sdi_quartile_label  \n",
-       "0              NaN  (24.0, 37.5]                 Q2  \n",
-       "1              NaN  (24.0, 37.5]                 Q2  \n",
-       "2              NaN  (24.0, 37.5]                 Q2  \n",
-       "3              NaN  (24.0, 37.5]                 Q2  \n",
-       "4              NaN  (24.0, 37.5]                 Q2  "
+       "                        Cumulative Number of Tests Performed  \\\n",
+       "County FIPS Test Date                                          \n",
+       "36001       2020-03-02                                     0   \n",
+       "            2020-03-03                                     0   \n",
+       "            2020-03-04                                     0   \n",
+       "            2020-03-05                                     3   \n",
+       "            2020-03-06                                     3   \n",
+       "\n",
+       "                        Rolling Avg New Cases  Per Capita Rate  sdi_quartile  \\\n",
+       "County FIPS Test Date                                                          \n",
+       "36001       2020-03-02                    0.0              0.0  (24.0, 37.5]   \n",
+       "            2020-03-03                    0.0              0.0  (24.0, 37.5]   \n",
+       "            2020-03-04                    0.0              0.0  (24.0, 37.5]   \n",
+       "            2020-03-05                    0.0              0.0  (24.0, 37.5]   \n",
+       "            2020-03-06                    0.0              0.0  (24.0, 37.5]   \n",
+       "\n",
+       "                       sdi_quartile_label  \n",
+       "County FIPS Test Date                      \n",
+       "36001       2020-03-02                 Q2  \n",
+       "            2020-03-03                 Q2  \n",
+       "            2020-03-04                 Q2  \n",
+       "            2020-03-05                 Q2  \n",
+       "            2020-03-06                 Q2  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "sorted_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./data/ny_county_data_v2.csv\")"
+    "sorted_df.to_csv(\"./data/ny_county_data_v2.csv\")"
    ]
   }
  ],
